--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,17 @@ flutter:
   # the Icons class.
   uses-material-design: true
 
+  assets:
+    - lib/assets/building.png
+    - lib/assets/cave.png
+    - lib/assets/civilized.png
+    - lib/assets/cold.png
+    - lib/assets/cursed.png
+    - lib/assets/dark.png
+    - lib/assets/hot.png
+    - lib/assets/mountain.png
+    - lib/assets/water.png
+    - lib/assets/wilderness.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
