--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
@@ -38,6 +37,7 @@ flutter:
     - lib/assets/plot_deck.png
     - lib/assets/overlord_deck.png
     - lib/assets/monster_cards.png
+    - lib/assets/collection.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
