--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ flutter:
     - lib/assets/overlord_deck.png
     - lib/assets/monster_cards.png
     - lib/assets/collection.png
+    - lib/assets/shadow_of_nerekhall.png
+    - lib/assets/chains_that_rust.png
+    - lib/assets/base_set.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
