--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
     - lib/assets/shadow_of_nerekhall.png
     - lib/assets/chains_that_rust.png
     - lib/assets/base_set.png
+    - lib/assets/lieutenants/splig.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
